fix: disable CSS background-image arrow for CustomSelect button elements to prevent double overlapping arrow icons in light mode

--- a/src/app/siakad/siakad.css
+++ b/src/app/siakad/siakad.css
@@ -1471,11 +1471,17 @@
   border-radius: 16px;
 }
 
-.siakad-modal-content select, .siakad-select {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12'%3E%3Cpath fill='%23555' d='M6 8L1 3h10z'/%3E%3C/svg%3E") !important;
+/* Single Caret Arrow for Native Select & CustomSelect */
+select {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12'%3E%3Cpath fill='%23888' d='M6 8L1 3h10z'/%3E%3C/svg%3E") !important;
   background-repeat: no-repeat !important;
   background-position: right 22px center !important;
   padding-right: 46px;
+}
+
+button.siakad-select,
+.siakad-custom-select-trigger {
+  background-image: none !important;
 }
 
 .siakad-input:focus, .siakad-select:focus, .siakad-modal-content input:focus, .siakad-modal-content select:focus, .siakad-modal-content textarea:focus {
